Example_resources/namespace_resources.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubilab-resources
  labels:
    environment: resources
