Example_resources/policy_resources_binding.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "policy-resources-binding"
spec:
  policyName: "policy-resources"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: resources
